Fixed visual problems on small screens in settings

--- a/resources/index.css
+++ b/resources/index.css
@@ -213,6 +213,7 @@ button {
   margin-top: 20vh;
   margin-bottom: 20vh;
   padding-top: 4rem;
+  padding-bottom: 6rem;
   width: 100%;
 }
 
